<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_blue_night"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#30000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_logo_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_csc_round" />

                <TextView
                    android:id="@+id/login_logo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin5"
                    android:paddingRight="@dimen/margin5"
                    android:text="@string/app_name_railway"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt18" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin35"
                android:layout_marginRight="@dimen/margin35"
                android:background="@drawable/bg_border_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/margin3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_marginRight="@dimen/margin3"
                    android:background="@mipmap/ic_host" />

                <EditText
                    android:id="@+id/ip_addr_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_ip_addr"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:padding="@dimen/margin5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_light_color"
                    android:textSize="@dimen/txt16" />

            </LinearLayout>

            <!-- 用户名 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin15"
                android:layout_marginLeft="@dimen/margin35"
                android:layout_marginRight="@dimen/margin35"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/bg_border_white"
                android:gravity="center_vertical"
                android:padding="@dimen/margin3"
                android:weightSum="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_marginRight="@dimen/margin3"
                    android:background="@mipmap/ic_user_log" />

                <EditText
                    android:id="@+id/username_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionNext"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="@dimen/margin5"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_light_color"
                    android:textSize="@dimen/txt16" />

            </LinearLayout>

            <!-- 密码 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin15"
                android:layout_marginLeft="@dimen/margin35"
                android:layout_marginRight="@dimen/margin35"
                android:background="@drawable/bg_border_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/margin3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin5"
                    android:layout_marginRight="1dp"
                    android:background="@mipmap/ic_pwd" />

                <EditText
                    android:id="@+id/password_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin3"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_pwd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="@dimen/margin5"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_light_color"
                    android:textSize="@dimen/txt16" />

                <CheckBox
                    android:id="@+id/cb_pwd_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin8"
                    android:checked="true"
                    android:background="@drawable/rb_pwd_selector"
                    android:button="@null"
                    android:padding="@dimen/margin5" />

            </LinearLayout>

            <EditText
                android:id="@+id/client_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin35"
                android:layout_marginRight="@dimen/margin35"
                android:background="@color/white"
                android:enabled="false"
                android:hint="显示clientid"
                android:maxLines="2"
                android:padding="@dimen/margin5"
                android:textColor="@color/black_light"
                android:textSize="@dimen/txt14"
                android:visibility="gone" />


            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin35"
                android:gravity="center"
                android:layout_marginRight="@dimen/margin35"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/bg_blue_login_selector"
                android:padding="@dimen/margin10"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/txt18" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_galaxy" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>